Signed-off-by: liangzhijian0 <657175454@qq.com>

--- a/article.html
+++ b/article.html
@@ -28,6 +28,7 @@
 			<h3>文章存档</h3>
 			<hr />
 			<ul type="circle">
+				<li>06/12&nbsp;&nbsp;&nbsp;<a href="article/jq中val(),html(),text()区别.html">jq中val(),html(),text()区别</a></li>
 			    <li>06/11&nbsp;&nbsp;&nbsp;<a href="article/封装jq的ajax函数.html">封装jq的ajax函数</a></li>
 				<li>03/11&nbsp;&nbsp;&nbsp;<a href="article/用css样式实现瀑布流效果.html">用css样式实现瀑布流效果</a></li>
 				<li>02/20&nbsp;&nbsp;&nbsp;<a href="article/数组基础.html">数组基础</a></li>
