--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<li role="presentation" class="active"><a href="#">Home</a></li>
 					<li role="presentation"><a href="aboutme.html">About me</a></li>
 					<li role="presentation"><a href="article.html">Article</a></li>
-					<li role="presentation"><a href="#">Demo</a></li>
+					<li role="presentation"><a href="demo.html">Demo</a></li>
 					<li role="presentation"><a href="front-end base.html">Front-end base</a></li>
 				</ul>
 			</div>
