--- a/demo.html
+++ b/demo.html
@@ -177,6 +177,7 @@ input[type=radio]:checked:after {
 			</div>
 			<div>预约回收衣服</div>
 		</div>
+		<div id="covered"></div>
 		<img src="img/u=1209481488,2796752005&fm=26&gp=0.jpg" width="100%" />
 		<div id="content">
 			<form class="form">
