Signed-off-by: liangzhijian0 <657175454@qq.com>

--- a/demo.html
+++ b/demo.html
@@ -177,6 +177,7 @@ input[type=radio]:checked:after {
         $(".first").css({"height":all_height*0.083,"padding-top":all_height*0.0207});
         $(".second").css({"height":all_height*0.083,"padding-top":all_height*0.0207});
 //      $("textarea").css({"width":200px})
+        $(".buttonb").css("height",all_height*0.083);
 })
 		</script>
 	</head>
