--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
 					<li role="presentation"><a href="index.html">Home</a></li>
 					<li role="presentation" class="active"><a href="#">About me</a></li>
 					<li role="presentation"><a href="article.html">Article</a></li>
-					<li role="presentation"><a href="#">Demo</a></li>
+					<li role="presentation"><a href="demo.html">Demo</a></li>
 					<li role="presentation"><a href="front-end base.html">Front-end base</a></li>
 				</ul>
 			</div>
