--- a/article/用css样式实现瀑布流效果.html
+++ b/article/用css样式实现瀑布流效果.html
@@ -20,7 +20,7 @@
 					<li role="presentation"><a href="../index.html">Home</a></li>
 					<li role="presentation"><a href="../aboutme.html">About me</a></li>
 					<li role="presentation" class="active"><a href="#">Article</a></li>
-					<li role="presentation"><a href="#">Demo</a></li>
+					<li role="presentation"><a href="../demo.html">Demo</a></li>
 					<li role="presentation"><a href="../front-end base.html">Front-end base</a></li>
 				</ul>
 			</div>
