Signed-off-by: liangzhijian0 <657175454@qq.com>

--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,8 @@
 			<h3>文章存档</h3>
 			<hr />
 			<ul type="circle">
-				<li><a href="demo/css3动画3D旋转.html">css3动画3D旋转</a></li>			    
+				<li><a href="demo/css3动画3D旋转.html">css3动画3D旋转</a></li>
+				<li><a href="demo/图片放大特写.html">图片放大特写</a></li>	
 			</ul>
 		</div>
 	</body>
